--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,15 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
 
-* {
-  box-sizing: border-box;
+@layer base {
+    body {
+        @apply bg-gray-100;
+    }
+@layer components{
+    .statusbtn{
+        @apply my-2 p-1.5  w-52 text-xs text-center font-medium uppercase tracking-wider cursor-pointer text-blue-800 bg-blue-200 hover:bg-blue-300 rounded-md;
+    }
+}    
 }
